--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,32 +1,16 @@
 name: Publish
 on:
-    push:
-      branches-ignore:
-        - master
-      tags-ignore:
-        - '*'
-    pull_request:
-# on:
-#   push:
-#     branches:
-#       - master
-#     tags:
-#       - v*
+  push:
+    branches:
+      - master
+    tags:
+      - v*
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v4
-    - uses: abatilo/actions-poetry@v2
-      with:
-        poetry-version: '1.7.1'
-    - name: Install the project dependencies
-      run: poetry install
-    - name: Run tests with pytest
-      run: |
-        poetry run coverage run --source=github,src -m pytest tests
     - uses: docker/login-action@v3
       with:
         registry: ghcr.io
