--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -14,21 +14,21 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v4
-    # - name: Install poetry
-    #   uses: abatilo/actions-poetry@v2
-    #   with:
-    #     poetry-version: '1.7.1'
-    # - name: Install the project dependencies
-    #   run: poetry install
-    # - name: Run pre-commit
-    #   run: |
-    #     poetry run pre-commit run --all-files
-    # - name: Run tests with pytest
-    #   run: |
-    #     poetry run coverage run --source=github,src -m pytest tests
-    # - name: Coverage report
-    #   run: |
-    #     poetry run coverage report -m
+    - name: Install poetry
+      uses: abatilo/actions-poetry@v2
+      with:
+        poetry-version: '1.7.1'
+    - name: Install the project dependencies
+      run: poetry install
+    - name: Run pre-commit
+      run: |
+        poetry run pre-commit run --all-files
+    - name: Run tests with pytest
+      run: |
+        poetry run coverage run --source=github,src -m pytest tests
+    - name: Coverage report
+      run: |
+        poetry run coverage report -m
   build:
     needs: tests
     runs-on: ubuntu-latest
