Extract data from multipart/form-data in a function httprequest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ exif = "^1.6.0"
 azure-storage-blob = "^12.19.1"
 azure-identity = "^1.16.0"
 azure-data-tables = "^12.5.0"
+werkzeug = "^3.0.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
